--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "ConnectionStrings": {
+    "MongoDB": "mongodb://admin:1234@localhost:27017/Talent_Hub"
+  }
+
 }
