--- a/Talent_Trade.csproj
+++ b/Talent_Trade.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="AspNetCore.Identity.Mongo" Version="9.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
 		<PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
 	</ItemGroup>
 
